Added ejs partial for shared header

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -19,6 +19,7 @@
 
   <!-- Body -->
   <body>
+    <%- include('partials/_header') %>
     <main style="margin: 1em">
       <h3>My URLs</h3>
       <table class="table">
