--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -13,6 +13,7 @@
 
   <!-- Body -->
   <body>
+    <%- include('partials/_header') %>
     <div class="card text-center">
       <div class="card-header"></div>
       <div class="card-body">
