--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -18,9 +18,7 @@
       <div class="card-header"></div>
       <div class="card-body">
         <h5 class="card-title">TinyURL for: <%= longURL %></h5>
-        <p class="card-text">
-          Short URL: <a href="/u/<%= shortURL %>"><%= shortURL %></a>
-        </p>
+        <p class="card-text">Short URL: <a href="/u/<%= id %>"><%= id %></a></p>
       </div>
       <div class="card-footer text-muted"></div>
     </div>
