--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -27,6 +27,7 @@
           <tr>
             <th scope="col">Short URL</th>
             <th scope="col">Long URL</th>
+            <th scope="col">Delete</th>
           </tr>
         </thead>
         <tbody>
@@ -34,6 +35,17 @@
           <tr>
             <td><%= url %></td>
             <td><%= urls[url] %></td>
+            <td>
+              <form
+                method="POST"
+                action="/urls/<%= url %>/delete"
+                class="form-inline"
+              >
+                <button type="submit" class="btn btn-outline-danger">
+                  Delete
+                </button>
+              </form>
+            </td>
           </tr>
           <% } %>
         </tbody>
