--- a/views/urls_new.ejs
+++ b/views/urls_new.ejs
@@ -23,7 +23,7 @@
 
     <main style="margin: 1em">
       <h3>Create TinyURL</h3>
-      <form class="form-inline" action="/urls" method="POST">
+      <form method="POST" action="/urls" class="form-inline">
         <div class="form-group mb-2">
           <label for="longURL">Enter a URL:</label>
           <input
