--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -27,7 +27,8 @@
           <tr>
             <th scope="col">Short URL</th>
             <th scope="col">Long URL</th>
-            <th scope="col">Delete</th>
+            <th scope="col"></th>
+            <th scope="col"></th>
           </tr>
         </thead>
         <tbody>
@@ -35,6 +36,17 @@
           <tr>
             <td><%= url %></td>
             <td><%= urls[url] %></td>
+            <td>
+              <form
+                method="GET"
+                action="/urls/<%= url %>/edit"
+                class="form-inline"
+              >
+                <button type="submit" class="btn btn-outline-primary">
+                  Edit
+                </button>
+              </form>
+            </td>
             <td>
               <form
                 method="POST"
