--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -34,8 +34,10 @@
         <tbody>
           <% for(const url in urls) { %>
           <tr>
-            <td><%= url %></td>
-            <td><%= urls[url] %></td>
+            <td><a href="/urls/<%= url %>"><%= url %></a></td>
+            <td>
+              <a href="<%= urls[url] %>" target="_blank"><%= urls[url] %></a>
+            </td>
             <td>
               <form
                 method="GET"
