--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+
     <!-- Bootstrap CSS -->
     <link
       rel="stylesheet"
@@ -8,20 +14,33 @@
       integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
       crossorigin="anonymous"
     />
-    <title>URL - TinyApp Example</title>
+    <title>Edit URL | TinyApp</title>
   </head>
 
   <body>
     <%- include('partials/_header') %>
 
-    <div class="card text-center">
-      <div class="card-header"></div>
-      <div class="card-body">
-        <h5 class="card-title">TinyURL for: <%= longURL %></h5>
-        <p class="card-text">Short URL: <a href="/u/<%= id %>"><%= id %></a></p>
+    <main style="margin: 1em">
+      <h3>Edit TinyURL</h3>
+
+      <div class="">Short URL: <a href="/u/<%= id %>"><%= id %></a></div>
+      <div class="">
+        Long URL: <a href="<%= longURL %>" target="_blank"><%= longURL %></a>
       </div>
-      <div class="card-footer text-muted"></div>
-    </div>
+      <form method="POST" action="/urls/<%= id %>" class="form-inline">
+        <div class="form-group mb-2">
+          <label for="longURL">New long URL:</label>
+          <input
+            class="form-control"
+            type="text"
+            name="longURL"
+            placeholder="http://"
+            style="width: 300px; margin: 1em"
+          />
+          <button type="submit" class="btn btn-primary">Update</button>
+        </div>
+      </form>
+    </main>
 
     <!-- Bootstrap JS -->
     <script
