Changed forms in ejs templates to display initial values

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -35,18 +35,14 @@
           <% for(const url in urls) { %>
           <tr>
             <!-- Short URL -->
-            <td><a href="/urls/<%= url %>"><%= url %></a></td>
+            <td><a href="/u/<%= url %>" target="_blank"><%= url %></a></td>
             <!-- Long URL -->
             <td>
               <a href="<%= urls[url] %>" target="_blank"><%= urls[url] %></a>
             </td>
             <!-- Button: Redirect to edit URL -->
             <td>
-              <form
-                method="GET"
-                action="/urls/<%= url %>/edit"
-                class="form-inline"
-              >
+              <form method="GET" action="/urls/<%= url %>" class="form-inline">
                 <button type="submit" class="btn btn-outline-success">
                   Edit
                 </button>
