--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -23,10 +23,15 @@
     <main style="margin: 1em">
       <h3>Edit TinyURL</h3>
 
-      <div class="">Short URL: <a href="/u/<%= id %>"><%= id %></a></div>
+      <!-- Short URL -->
+      <div class="">
+        Short URL: <a href="/u/<%= id %>" target="_blank"><%= id %></a>
+      </div>
+      <!-- Long URL -->
       <div class="">
         Long URL: <a href="<%= longURL %>" target="_blank"><%= longURL %></a>
       </div>
+      <!-- New long URL -->
       <form method="POST" action="/urls/<%= id %>" class="form-inline">
         <div class="form-group mb-2">
           <label for="longURL">New long URL:</label>
@@ -34,7 +39,7 @@
             class="form-control"
             type="text"
             name="longURL"
-            placeholder="http://"
+            value="<%= longURL %>"
             style="width: 300px; margin: 1em"
           />
           <button type="submit" class="btn btn-primary">Update</button>
