--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -18,5 +18,16 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
+    <form method="POST" action="/login" class="form-inline">
+      <input
+        class="form-control"
+        type="text"
+        name="username"
+        placeholder="Username"
+        style="width: 200px; margin: 0em 1em"
+      />
+      <button type="submit" class="btn btn-primary">Sign in</button>
+      <div class="navbar-text" style="margin: 0em 1em"><%= username %></div>
+    </form>
   </nav>
 </header>
