--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -18,6 +18,7 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
+    <% if (!username) { %>
     <form method="POST" action="/login" class="form-inline">
       <input
         class="form-control"
@@ -26,8 +27,15 @@
         placeholder="Username"
         style="width: 200px; margin: 0em 1em"
       />
-      <button type="submit" class="btn btn-primary">Sign in</button>
-      <div class="navbar-text" style="margin: 0em 1em"><%= username %></div>
+      <button type="submit" class="btn btn-primary">Login</button>
     </form>
+    <% } else { %>
+    <form method="POST" action="/logout" class="form-inline">
+      <div class="navbar-text" style="margin: 0em 1em">
+        Hello, <%= username %>
+      </div>
+      <button type="submit" class="btn btn-primary">Logout</button>
+    </form>
+    <% } %>
   </nav>
 </header>
