--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -18,7 +18,7 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
-    <% if (!username) { %>
+    <% if (!user.email) { %>
     <form method="POST" action="/login" class="form-inline">
       <input
         class="form-control"
@@ -32,7 +32,7 @@
     <% } else { %>
     <form method="POST" action="/logout" class="form-inline">
       <div class="navbar-text" style="margin: 0em 1em">
-        Hello, <%= username %>
+        Hello, <%= user.email %>
       </div>
       <button type="submit" class="btn btn-primary">Logout</button>
     </form>
