Added GET /login to render separate login page

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -15,14 +15,14 @@
       crossorigin="anonymous"
     />
 
-    <title>Register | TinyApp</title>
+    <title>Login | TinyApp</title>
   </head>
 
   <body>
     <%- include('partials/_header') %>
 
     <main style="margin: 1em">
-      <h3>Register</h3>
+      <h3>Login</h3>
       <form method="POST" action="/register">
         <!-- Email -->
         <div class="form-group">
