--- a/views/login.ejs
+++ b/views/login.ejs
@@ -28,7 +28,7 @@
 
     <main style="margin: 1em">
       <h3>Login</h3>
-      <form method="POST" action="/register">
+      <form method="POST" action="/login">
         <!-- Email -->
         <div class="form-group">
           <label for="email">Email:</label>
