--- a/views/urls_new.ejs
+++ b/views/urls_new.ejs
@@ -14,13 +14,8 @@
       integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
       crossorigin="anonymous"
     />
-    <!-- Font Awesome CSS -->
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
 
-    <title>New URL | TinyApp</title>
+    <title>Add | TinyApp</title>
   </head>
 
   <body>
