Fixed bug in analytics: disregard old visitor cookies

--- a/views/urls_list.ejs
+++ b/views/urls_list.ejs
@@ -71,6 +71,13 @@
           <% } %>
         </tbody>
       </table>
+      <hr />
+
+      <form method="GET" action="/urls/new" class="form-inline">
+        <button type="submit" class="btn btn-outline-success">
+          Create new Short URL
+        </button>
+      </form>
     </main>
 
     <!-- Bootstrap JS -->
