--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -15,7 +15,7 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a href="/urls" class="nav-item nav-link">My URLs</a>
-        <a href="/urls/new" class="nav-item nav-link">Create New URL</a>
+        <a href="/urls/new" class="nav-item nav-link">New Short URL</a>
       </div>
     </div>
 
@@ -24,13 +24,11 @@
       <a href="/login" class="nav-item nav-link">Login</a>
       <a href="/register" class="nav-item nav-link">Register</a>
     </div>
+
     <% } else { %>
     <form method="POST" action="/logout">
       <label>Logged in as: <%= user.email %>&nbsp;</label>
-      <button type="submit" class="btn btn-primary">
-        Logout
-        <!-- <span class="fa fa-sign-out fa-lg"></span> -->
-      </button>
+      <button type="submit" class="btn btn-primary">Logout</button>
     </form>
     <% } %>
   </nav>
